--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,21 @@
-.movie-container {
-    
-}
+.movie-container {}
+
 .homepage-hero-module {
     border-right: none;
     border-left: none;
-    position: relative;   
+    position: relative;
 }
 
 .no-video .video-container video,
 .touch .video-container video {
     display: none;
 }
+
 .no-video .video-container .poster,
 .touch .video-container .poster {
     display: block !important;
 }
+
 .video-container {
     position: relative;
     bottom: 0%;
@@ -24,38 +25,41 @@
     overflow: hidden;
     background: #000;
 }
+
 .video-container .poster img {
     width: 100%;
     bottom: 0;
     position: absolute;
 }
+
 .video-container .filter {
     z-index: 100;
     position: absolute;
     background: rgba(0, 0, 0, 0.4);
     width: 100%;
 }
+
 .video-container video {
     position: absolute;
     z-index: 0;
     bottom: 0;
 }
+
 .video-container video.fillWidth {
     width: 100%;
 }
 
-.container{
-  z-index: 999;
-  width: 650px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  /* bring your own prefixes */
-  transform: translate(-50%, -50%);
-
-
+.container {
+    z-index: 999;
+    width: 650px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
 }
-.container p{
+
+.container p {
     display: block;
     text-align: center;
     margin: auto;
@@ -63,7 +67,8 @@
     font-family: 'Open Sans', sans-serif;
     padding: 30px;
 }
-.container input{
+
+.container input {
     opacity: 0.4;
     text-align: center;
     display: block;
@@ -72,37 +77,45 @@
     height: 38px;
     font-family: 'Open Sans', sans-serif;
 }
-.searchbar{
+
+.searchbar {
     text-align: center;
 }
-.searchbar input, .searchbar button {
-    display: inline;  
+
+.searchbar input,
+.searchbar button {
+    display: inline;
 }
-.container .down{
+
+.container .down {
     display: block;
     margin: auto;
     margin-top: 90px;
-    
 }
-button{
-    -moz-box-shadow:inset 0px 1px 0px 0px #9acc85;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #9acc85;
-	box-shadow:inset 0px 1px 0px 0px #9acc85;
-	background-color:#74ad5a;
-	border:1px solid #3b6e22;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
+
+button {
+    -moz-box-shadow: inset 0px 1px 0px 0px #9acc85;
+    -webkit-box-shadow: inset 0px 1px 0px 0px #9acc85;
+    box-shadow: inset 0px 1px 0px 0px #9acc85;
+    background-color: #74ad5a;
+    border: 1px solid #3b6e22;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
     font-family: 'Open Sans', sans-serif;
-	font-size:13px;
-	font-weight:bold;
-	padding:6px 12px;
-	text-decoration:none;
+    font-size: 13px;
+    font-weight: bold;
+    padding: 6px 12px;
+    text-decoration: none;
     height: 38px;
     width: 42px;
 }
-.contain{
+
+.contain {
     width: 1200px;
     margin: auto;
-    
+}
+
+#dynamicContent {
+    height: 100vh;
 }
