--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@
     margin-top: 90px;
 }
 
-button {
+#search {
     -moz-box-shadow: inset 0px 1px 0px 0px #9acc85;
     -webkit-box-shadow: inset 0px 1px 0px 0px #9acc85;
     box-shadow: inset 0px 1px 0px 0px #9acc85;
@@ -110,6 +110,23 @@ button {
     height: 38px;
     width: 42px;
 }
+
+.movieButton {
+    background-color: #d1d1d1;
+    border: 1px solid #0d0d0d;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    padding: 6px 12px;
+    text-decoration: none;
+    height: 38px;
+    width: 100px;
+}
+
+.movieDiv {}
 
 .contain {
     width: 1200px;
